@@ -1,5 +1,5 @@
 /*
- * Copyright 2008 the original author or authors.
+ * Copyright 2009 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,6 +15,9 @@
  */
 package org.powermock.core.classloader;
 
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
+
 import java.util.LinkedList;
 import java.util.List;
 
@@ -26,25 +29,39 @@ import org.powermock.core.transformers.impl.MainMockTransformer;
 import org.powermock.reflect.Whitebox;
 
 public class MockClassLoaderTest {
-	@Test
-	public void test() throws Exception {
-		String name = this.getClass().getPackage().getName() + ".HardToTransform";
-		final MockClassLoader mockClassLoader = new MockClassLoader(new String[] { name });
-		List<MockTransformer> list = new LinkedList<MockTransformer>();
-		list.add(new MainMockTransformer());
-		mockClassLoader.setMockTransformerChain(list);
-		Class<?> c = mockClassLoader.loadClass(name);
+    @Test
+    public void autoboxingWorks() throws Exception {
+        String name = this.getClass().getPackage().getName() + ".HardToTransform";
+        final MockClassLoader mockClassLoader = new MockClassLoader(new String[] { name });
+        List<MockTransformer> list = new LinkedList<MockTransformer>();
+        list.add(new MainMockTransformer());
+        mockClassLoader.setMockTransformerChain(list);
+        Class<?> c = mockClassLoader.loadClass(name);
 
-		Object object = c.newInstance();
-		Whitebox.invokeMethod(object, "run");
-		Assert.assertEquals(5, Whitebox.invokeMethod(object, "testInt"));
-		Assert.assertEquals(5L, Whitebox.invokeMethod(object, "testLong"));
-		Assert.assertEquals(5f, Whitebox.invokeMethod(object, "testFloat"));
-		Assert.assertEquals(5.0, Whitebox.invokeMethod(object, "testDouble"));
-		Assert.assertEquals(new Short("5"), Whitebox.invokeMethod(object, "testShort"));
-		Assert.assertEquals(new Byte("5"), Whitebox.invokeMethod(object, "testByte"));
-		Assert.assertEquals(true, Whitebox.invokeMethod(object, "testBoolean"));
-		Assert.assertEquals('5', Whitebox.invokeMethod(object, "testChar"));
-		Assert.assertEquals("5", Whitebox.invokeMethod(object, "testString"));
-	}
+        Object object = c.newInstance();
+        Whitebox.invokeMethod(object, "run");
+        Assert.assertEquals(5, Whitebox.invokeMethod(object, "testInt"));
+        Assert.assertEquals(5L, Whitebox.invokeMethod(object, "testLong"));
+        Assert.assertEquals(5f, Whitebox.invokeMethod(object, "testFloat"));
+        Assert.assertEquals(5.0, Whitebox.invokeMethod(object, "testDouble"));
+        Assert.assertEquals(new Short("5"), Whitebox.invokeMethod(object, "testShort"));
+        Assert.assertEquals(new Byte("5"), Whitebox.invokeMethod(object, "testByte"));
+        Assert.assertEquals(true, Whitebox.invokeMethod(object, "testBoolean"));
+        Assert.assertEquals('5', Whitebox.invokeMethod(object, "testChar"));
+        Assert.assertEquals("5", Whitebox.invokeMethod(object, "testString"));
+    }
+
+    @Test
+    public void powerMockIgnoreAnnotatedPackagesAreIgnored() throws Exception {
+        MockClassLoader mockClassLoader = new MockClassLoader(new String[] { "org.mytest.myclass" });
+        Whitebox.setInternalState(mockClassLoader, new String[] { "*mytest*" }, DeferSupportingClassLoader.class);
+        assertFalse(Whitebox.<Boolean> invokeMethod(mockClassLoader, "shouldModify", "org.mytest.myclass"));
+    }
+
+    @Test
+    public void prepareForTestPackagesArePrepared() throws Exception {
+        MockClassLoader mockClassLoader = new MockClassLoader(new String[] { "*mytest*" });
+        assertTrue(Whitebox.<Boolean> invokeMethod(mockClassLoader, "shouldModify", "org.mytest.myclass"));
+    }
+
 }
