@@ -1,3 +1,18 @@
+/*
+ * Copyright 2009 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package org.powermock.modules.testng.internal;
 
 import java.lang.reflect.Method;
@@ -8,7 +23,7 @@ import org.powermock.core.MockRepository;
 import org.powermock.reflect.Whitebox;
 import org.testng.annotations.Test;
 
-/**
+/*
  * Javassist handler that takes care of cleaing up {@link MockRepository} state
  * after each method annotated with {@link Test}.
  */
@@ -18,7 +33,7 @@ public class PowerMockTestNGMethodHandler implements MethodHandler {
 
     public PowerMockTestNGMethodHandler(Class<?> testClass) {
         try {
-            Class<?> annotationEnablerClass = Class.forName("org.powermock.api.extensions.listener.AnnotationEnabler");
+            Class<?> annotationEnablerClass = Class.forName("org.powermock.api.extension.listener.AnnotationEnabler");
             annotationEnabler = Whitebox.newInstance(annotationEnablerClass);
         } catch (ClassNotFoundException e) {
             annotationEnabler = null;
